<resources>
	<string name="app_name" translatable="false">µDoro</string>

	<!--SNACK_BAR-->
	<string name="wait_message">Please Wait...</string>

	<!--TEXT_VIEWS-->
	<string name="text_press_start">Press Start</string>

	<string name="text_get_to_work">Let\'s get to work !</string>
	<string name="text_time_for_short_break">Time for a quick break</string>
	<string name="text_time_for_long_break">Time for a long break</string>

	<string name="text_pomodoro_in_progress">Pomodoro in progress...</string>
	<string name="text_short_break_in_progress">Quick break in progress...</string>
	<string name="text_long_break_in_progress">Long break in progress...</string>


	<!--SETTINGS-->
	<string name="pref_category_pomodoro">Pomodoro</string>
	<string name="pref_pomodoro_amount_title">Pomodoro amount</string>
	<string name="pref_pomodoro_amount_summary">How many Pomodoros before a long break</string>
	<string name="pref_pomodoro_duration_title">Pomodoro duration</string>
	<string name="pref_pomodoro_duration_summary">How long is a Pomodoro session</string>

	<string name="pref_category_breaks">Breaks</string>
	<string name="pref_short_break_duration_title">Quick break duration</string>
	<string name="pref_short_break_duration_summary">How long is a quick break</string>
	<string name="pref_long_break_duration_title">Long break duration</string>
	<string name="pref_long_break_duration_summary">How long is a long break</string>

	<string name="pref_category_notifications">Notifications</string>
	<string name="pref_ring_title">Ring</string>
	<string name="pref_vibrate_title">Vibrate</string>
</resources>
