<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory
		android:title="@string/pref_category_pomodoro">

		<ListPreference
			android:key="pomodoro_amount"
			android:defaultValue="4"
			android:title="@string/pref_pomodoro_amount_title"
			android:summary="@string/pref_pomodoro_amount_summary"
			android:entries="@array/pomodoroAmountArray"
			android:entryValues="@array/pomodoroAmountValues"
			/>
		<ListPreference
			android:key="pomodoro_duration"
			android:defaultValue="25"
			android:title="@string/pref_pomodoro_duration_title"
			android:summary="@string/pref_pomodoro_duration_summary"
			android:entries="@array/pomodoroDurationArray"
			android:entryValues="@array/pomodoroDurationValues"
			/>
	</PreferenceCategory>

	<PreferenceCategory
		android:title="@string/pref_category_breaks">

		<ListPreference
			android:key="short_break_duration"
			android:defaultValue="5"
			android:title="@string/pref_short_break_duration_title"
			android:summary="@string/pref_short_break_duration_summary"
			android:entries="@array/shortBreakArray"
			android:entryValues="@array/shortBreakValues"
			/>
		<ListPreference
			android:key="long_break_duration"
			android:defaultValue="20"
			android:title="@string/pref_long_break_duration_title"
			android:summary="@string/pref_long_break_duration_summary"
			android:entries="@array/longBreakArray"
			android:entryValues="@array/longBreakValues"
			/>

	</PreferenceCategory>

	<PreferenceCategory
		android:title="@string/pref_category_notifications">

		<SwitchPreference
			android:key="notification_ring"
			android:defaultValue="true"
			android:title="@string/pref_ring_title"
			/>
		<SwitchPreference
			android:key="notification_vibrate"
			android:defaultValue="true"
			android:title="@string/pref_vibrate_title"
			/>
	</PreferenceCategory>

</PreferenceScreen>
